# Virtual-Power-Plant-openenv

./: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  baseline_inference.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate.py
data/: dataset_generator.py
server/: Dockerfile  __init__.py  app.py  asset_models.py  debug_reward_test.py  grader.py  requirements.txt  test_client_parse.py  vpp_environment.py
server/data/: prices_easy.csv  prices_hard.csv  prices_medium.csv
